--- a/NAV/styles.css
+++ b/NAV/styles.css
@@ -1,5 +1,9 @@
 .item:hover{
-    background-color: red
+    background-color: red;
+}
+
+.ditem:hover{
+    background-color: yellow;
 }
 
 .nav-bar{
