--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,12 +13,28 @@
 	padding: 15px;
 	width: 30%;
 	margin: 10px;
-	display: inline-block;
+	display: block;
+	position: relative;
+}
+
+.projectcard>a {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	text-decoration: none;
+	border-bottom: #000000;
 }
 
 .projectcard:hover {
 	transform: scale(1.02);
 	transform-origin: bottom;
+}
+
+.reveal {
+	opacity: 0;
+	transition: opacity 2s;
 }
 
 .learnmore {
@@ -3916,7 +3932,7 @@ body.is-touch #banner {
 	}
 
 	.projects {
-		display: inline-flex;
+		display: flex;
 	}
 
 }
@@ -4237,7 +4253,7 @@ body.is-touch #banner {
 	}
 
 	.projects {
-		display: inline-flex;
+		display: flex;
 	}
 }
 
@@ -4317,6 +4333,6 @@ body.is-touch #banner {
 	}
 
 	.projects {
-		display: inline-block;
+		display: flex;
 	}
 }
