--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,6 +15,12 @@
 	margin: 10px;
 	display: block;
 	position: relative;
+	z-index: 1;
+}
+
+.projectcard>h3,
+p {
+	z-index: 1;
 }
 
 .projectcard>a {
@@ -25,6 +31,7 @@
 	left: 0;
 	text-decoration: none;
 	border-bottom: #000000;
+	z-index: -1;
 }
 
 .projectcard:hover {
