--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,12 +44,24 @@ p {
 	transition: opacity 2s;
 }
 
-.learnmore {
-	width: 100%;
-}
-
 .projectname {
 	text-align: center;
+}
+
+.skills {
+	height: 240px;
+	width: 240px;
+	background-color: #272833;
+	border-radius: 50%;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	margin: 0 0 2em 0;
+}
+
+.skills>svg {
+	height: 144px;
+	width: 144px;
 }
 
 /*
@@ -3942,6 +3954,22 @@ body.is-touch #banner {
 		display: flex;
 	}
 
+	.skills {
+		height: 210px;
+		width: 210px;
+		background-color: #272833;
+		border-radius: 50%;
+		display: inline-flex;
+		align-items: center;
+		justify-content: center;
+		margin: 0 0 2em 0;
+	}
+
+	.skills>svg {
+		height: 126px;
+		width: 126px;
+	}
+
 }
 
 /* Small */
@@ -4262,6 +4290,22 @@ body.is-touch #banner {
 	.projects {
 		display: flex;
 	}
+
+	.skills {
+		height: 180px;
+		width: 180px;
+		background-color: #272833;
+		border-radius: 50%;
+		display: inline-flex;
+		align-items: center;
+		justify-content: center;
+		margin: 0 0 2em 0;
+	}
+
+	.skills>svg {
+		height: 108px;
+		width: 108px;
+	}
 }
 
 /* XSmall */
@@ -4341,5 +4385,21 @@ body.is-touch #banner {
 
 	.projects {
 		display: flex;
+	}
+
+	.skills {
+		height: 150px;
+		width: 150px;
+		background-color: #272833;
+		border-radius: 50%;
+		display: inline-flex;
+		align-items: center;
+		justify-content: center;
+		margin: 0 0 2em 0;
+	}
+
+	.skills>svg {
+		height: 90px;
+		width: 90px;
 	}
 }
