--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@
 }
 
 .projectcard {
-	background-color: #272833;
+	background-color: rgba(120, 1, 113, 0.66);
 	border-radius: 10px;
 	padding: 15px;
 	width: 30%;
@@ -36,6 +36,7 @@ p {
 
 .projectcard:hover {
 	transform: scale(1.02);
+	background-color: rgba(120, 1, 113, 0.88);
 	transform-origin: bottom;
 }
 
@@ -62,6 +63,178 @@ p {
 .skills>svg {
 	height: 144px;
 	width: 144px;
+}
+
+.slideshow-container {
+	width: 66%;
+	margin: 0 auto;
+}
+
+.slideshow {
+	position: relative;
+	width: 100%;
+	height: 500px;
+}
+
+.slideshow img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+	transition: opacity 1s ease-in-out;
+}
+
+.slideshow img.active {
+	opacity: 1;
+}
+
+.prev,
+.next {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	font-size: 2rem;
+	font-weight: bold;
+	text-decoration: none;
+	color: white;
+	background-color: rgba(0, 0, 0, 0.5);
+	padding: 0.5rem;
+	border-radius: 0.5rem;
+	cursor: pointer;
+}
+
+.prev {
+	left: 1rem;
+}
+
+.next {
+	right: 1rem;
+}
+
+.accordion-content {
+	display: none;
+	overflow: hidden;
+	transition: max-height 1s ease-out;
+	max-height: 0;
+}
+
+.accordion-content.active>b {
+	display: block;
+	margin-bottom: 10px;
+}
+
+.accordion-content.active {
+	display: block;
+	max-height: 1000px;
+	margin-top: 10px;
+	margin-left: 15px;
+	margin-right: 15px;
+}
+
+.accordion-item {
+	border-radius: 10px;
+	padding: 10px;
+	margin-bottom: 10px;
+}
+
+#overview {
+	background-color: rgba(225, 54, 82, 0.66);
+}
+
+#overview:hover {
+	background-color: rgba(225, 54, 82, 0.88);
+}
+
+#career {
+	background-color: rgba(165, 42, 42, 0.66);
+}
+
+#career:hover {
+	background-color: rgba(165, 42, 42, 0.88);
+}
+
+#interests {
+	background-color: rgba(190, 69, 0, 0.66);
+}
+
+#interests:hover {
+	background-color: rgba(190, 69, 0, 0.88);
+}
+
+#hobbies {
+	background-color: rgba(0, 0, 128, 0.66);
+}
+
+#hobbies:hover {
+	background-color: rgba(0, 0, 128, 0.88);
+}
+
+#sports {
+	background-color: rgba(77, 0, 180, 0.66);
+}
+
+#sports:hover {
+	background-color: rgba(77, 0, 180, 0.88);
+}
+
+#anime {
+	background-color: rgba(183, 26, 240, 0.66);
+}
+
+#anime:hover {
+	background-color: rgba(183, 26, 240, 0.88);
+}
+
+#travel {
+	background-color: rgba(102, 51, 153, 0.66);
+}
+
+#travel:hover {
+	background-color: rgba(102, 51, 153, 0.88);
+}
+
+#music {
+	background-color: rgba(4, 149, 217, 0.66);
+}
+
+#music:hover {
+	background-color: rgba(4, 149, 217, 0.88);
+}
+
+#other {
+	background-color: rgba(65, 0, 89, 0.66);
+}
+
+#other:hover {
+	background-color: rgba(65, 0, 89, 0.88);
+}
+
+.accordion-content>h4 {
+	display: flex;
+	align-items: center;
+}
+
+.accordion-content>h4>img {
+	display: block;
+}
+
+.accordion-content>b>a {
+	color: rgb(223, 223, 237);
+}
+
+.company-logo {
+	display: flex;
+	background-color: rgba(255, 255, 255);
+	padding: 8px;
+	border-radius: 10px;
+	margin-right: 8px;
+}
+
+.company-logo>svg {
+	height: 25px;
+	width: 25px;
 }
 
 /*
