--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -65,31 +65,6 @@ p {
 	width: 144px;
 }
 
-.slideshow-container {
-	width: 66%;
-	margin: 0 auto;
-}
-
-.slideshow {
-	position: relative;
-	width: 100%;
-	height: 500px;
-}
-
-.slideshow img {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	opacity: 0;
-	transition: opacity 1s ease-in-out;
-}
-
-.slideshow img.active {
-	opacity: 1;
-}
-
 .prev,
 .next {
 	position: absolute;
@@ -231,7 +206,8 @@ p {
 }
 
 .accordion-header {
-	display: flex;
+	margin: 0;
+	padding: 0;
 }
 
 .accordion-content>h4 {
@@ -264,6 +240,11 @@ p {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	grid-gap: 30px;
+}
+
+.two-col>img {
+	width: 100%;
+	margin-bottom: 10px;
 }
 
 #infographic {
@@ -4188,6 +4169,14 @@ body.is-touch #banner {
 		height: 400px;
 	}
 
+	.two-col>img {
+		width: 80%;
+		aspect-ratio: 600/338;
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
 	#infographic {
 		width: 100%;
 		height: 90%;
@@ -4537,6 +4526,14 @@ body.is-touch #banner {
 		display: block;
 	}
 
+	.two-col>img {
+		width: 80%;
+		aspect-ratio: 600/338;
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
 	#infographic {
 		width: 100%;
 		height: 400px;
@@ -4644,6 +4641,14 @@ body.is-touch #banner {
 
 	.two-col {
 		display: block;
+	}
+
+	.two-col>img {
+		width: 80%;
+		aspect-ratio: 600/338;
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
 	}
 
 	#infographic {
